--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "lambda",
     "nodejs"
   ],
+  "dependencies": [
+    "phantomjs": "^2.1.7",
+    "q": "^1.4.1",
+    "request": "^2.74.0",
+    "underscore": "^1.8.3"
+  ],
   "author": "Mike Lyons <mdl0394@gmail.com>",
   "license": "MIT",
   "bugs": {
